# kore-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py  test_contabiliza_es.py  test_memoria_contabiliza.py
kore/: __init__.py  engine.py  memory.py  models.py  normalize.py
kore/ingest/: __init__.py  loader.py
kore/retrieval/: __init__.py  bm25.py  semantic.py
kore/storage/: __init__.py  sqlite.py
tests/: test_bm25.py  test_engine.py  test_memory.py  test_normalize.py  test_storage.py
