[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kore-engine"
version = "0.2.0"
description = "Kore — Motor de Conocimiento Inteligente. Cache + comprensión + decisión en un solo paquete."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "IAFiscal", email = "info@iafiscal.es"},
]
keywords = ["knowledge-engine", "cache", "llm", "ai", "retrieval", "bm25"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# CERO dependencias obligatorias
dependencies = []

[project.optional-dependencies]
semantic = [
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/iafiscal1212/kore-engine"
Repository = "https://github.com/iafiscal1212/kore-engine"

[tool.hatch.build.targets.wheel]
packages = ["kore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
